<resources>
    <string name="app_name">kappusta</string>
    <string name="title_home">Start</string>
    <string name="title_dashboard">Statystyki</string>
    <string name="title_notifications">Portfele</string>
    <string name="title_history">Rozliczenia</string>
    <string name="reporting_ok_button">zapisz</string>
    <string name="title_reporting">Dodaj nowy wpis</string>
    <string name="category">Codzienne</string>
    <string name="date">01.01.2020</string>
    <string name="reported_how_much">12.99 zł</string>
    <string name="reporting_edit_text_hint">Ile złotych?</string>
    <string name="home_title">W tym miesiącu zostało Ci</string>
    <string name="home_percent_title">założonego budżetu</string>
    <string name="title_settings">Dostosuj</string>
    <string name="set_budget">Twój budżet na ten miesiąc</string>
    <string name="setting_budget_text_hint">Ile złotych?</string>
    <string name="set_budget_description_end_icon">Ustaw</string>
    <string name="currency_txt">zł</string>
    <string name="dashboard_avg_txt">Średnio, każdego dnia wydawano</string>
    <string name="dashboard_avg_daily_title">na codzienne</string>
    <string name="dashboard_avg_daily_and_special_title">na codzienne+specjalne</string>
    <string name="dashboard_salary_txt">Do najbliższej wypłaty potrzeba</string>
    <string name="dashboard_salary_days_title">dni</string>
    <string name="dashboard_salary_money_left_title">pieniędzy</string>
    <string name="spending_curve_graph_title">Tempo wydawania pieniędzy</string>
    <string name="data_series_predicted_title">Przewidywany stan budżetu</string>
    <string name="data_series_spending_title">Rzeczywisty stan budżetu</string>
    <string name="text_home_percent_left_title">pieniędzy w budżecie</string>
    <string name="text_home_percent_avg_title">względem przewidywań</string>
    <string name="achievements_title">Twoje osiągnięcia na dziś</string>
    <string name="avg_curve_graph_title">Średnie dzienne wydatki</string>
    <string name="data_series_daily_avg_title">Codzienne</string>
    <string name="data_series_special_avg_title">Specjalne</string>
    <string name="title_authentication">Logowanie</string>
    <string name="logout_button_txt">Wyloguj się</string>
    <string name="auth_welcome">Cześć, zapraszam do zalogowania:)</string>
    <string name="reporting_edit_text_comment_hint">Dodać komentarz?</string>
    <string name="reporting_edit_tag_hint">Dodać tag?</string>
    <string name="reporting_split_button_text">Podziel koszty</string>
    <string name="notifications_add_group">Dodaj portfel</string>
    <string-array name="Categories">
        <item>Codzienne wydatki</item>
        <item>Specjalne wydatki</item>
        <item>Inne wydatki</item>
        <item>Wypłata</item>
        <item>Bonus</item>
        <item>Jednorazowy przychód</item>
    </string-array>
</resources>
