<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.vonHousen.kappusta.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"
        />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.vonHousen.kappusta.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard"
        />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.vonHousen.kappusta.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history"
        />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.vonHousen.kappusta.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications"
        />

    <fragment
        android:id="@+id/navigation_reporting"
        android:name="com.vonHousen.kappusta.ui.reporting.ReportingFragment"
        android:label="@string/title_reporting"
        tools:layout="@layout/fragment_reporting"
        />

</navigation>
