<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:padding="12dp"
    android:background="@drawable/rounded_field"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    >

    <TextView
        android:id="@+id/reporting_history_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        />

    <TextView
        android:id="@+id/reporting_history_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:fontFamily="sans-serif-light"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/reporting_history_category"
        app:layout_constraintStart_toStartOf="@id/reporting_history_category"
        />

    <TextView
        android:id="@+id/reporting_history_how_much"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reported_how_much"
        android:fontFamily="sans-serif-light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>