<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment"
    android:padding="16dp"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_budget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_field"
        android:padding="16dp"
        >

        <TextView
            android:id="@+id/text_set_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/set_budget"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setting_budget_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/setting_budget_text_hint"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_set_budget"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_add_24dp"
            app:endIconContentDescription="@string/set_budget_description_end_icon"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setting_budget_edit_text_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                />
        </com.google.android.material.textfield.TextInputLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        >

        <Button
            android:id="@+id/button_logout"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif-light"
            android:text="@string/logout_button_txt"
            android:textColor="@color/colorBackground"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>