<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:padding="12dp"
    android:background="@drawable/rounded_field_rippled"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:focusable="true"
    android:clickable="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/wallets_overview_item_balance"
        >

        <TextView
            android:id="@+id/wallets_overview_item_wallet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kanapka"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/wallets_overview_item_last_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:fontFamily="sans-serif-light"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/wallets_overview_item_wallet_name"
            app:layout_constraintStart_toStartOf="@id/wallets_overview_item_wallet_name"
            />

        <TextView
            android:id="@+id/wallets_overview_item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:fontFamily="sans-serif-light"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/wallets_overview_item_last_date"
            app:layout_constraintStart_toEndOf="@id/wallets_overview_item_last_date"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/wallets_overview_item_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reported_how_much"
        android:fontFamily="sans-serif-light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>