<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.dashboard.DashboardFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_field"
        android:padding="16dp"
        >

        <TextView
            android:id="@+id/dashboard_avg_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/dashboard_avg_txt"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dashboard_avg_txt"
            >

            <TextView
                android:id="@+id/guideline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/dashboard_avg_daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                />

            <TextView
                android:id="@+id/dashboard_avg_daily_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="12sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/dashboard_avg_daily_title"
                app:layout_constraintTop_toBottomOf="@id/dashboard_avg_daily"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/dashboard_avg_daily"
                app:layout_constraintEnd_toEndOf="@id/dashboard_avg_daily"
                />

            <TextView
                android:id="@+id/dashboard_avg_daily_and_special"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/dashboard_avg_daily_and_special_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="12sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/dashboard_avg_daily_and_special_title"
                app:layout_constraintTop_toBottomOf="@id/dashboard_avg_daily_and_special"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/dashboard_avg_daily_and_special"
                app:layout_constraintEnd_toEndOf="@id/dashboard_avg_daily_and_special"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_field"
        android:padding="16dp"
        >

        <TextView
            android:id="@+id/dashboard_salary_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/dashboard_salary_txt"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dashboard_salary_txt"
            >

            <TextView
                android:id="@+id/guideline1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/dashboard_salary_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline1"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/dashboard_salary_days_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="12sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/dashboard_salary_days_title"
                app:layout_constraintTop_toBottomOf="@id/dashboard_salary_days"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/dashboard_salary_days"
                app:layout_constraintEnd_toEndOf="@id/dashboard_salary_days"
                />

            <TextView
                android:id="@+id/dashboard_salary_money_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline1"
                />

            <TextView
                android:id="@+id/dashboard_salary_money_left_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="12sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/dashboard_salary_money_left_title"
                app:layout_constraintTop_toBottomOf="@id/dashboard_salary_money_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/dashboard_salary_money_left"
                app:layout_constraintEnd_toEndOf="@id/dashboard_salary_money_left"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_field"
        android:padding="16dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/avg_curve_graph_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/avg_curve_graph_title"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.jjoe64.graphview.helper.GraphViewXML
            android:id="@+id/avg_curve_graph"
            android:layout_width="match_parent"
            android:layout_height="200dip"
            app:seriesData="0=5;2=5;3=0;4=2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </LinearLayout>

</LinearLayout>